--- a/src/content/help.html
+++ b/src/content/help.html
@@ -140,8 +140,9 @@
     <h2>Delete Browser Data</h2>
     <p>Delete cookies, indexedDB storage, DOM local storage</p>
 
-    <h2>Limit WebRTC (or reset) <span>(requires "privacy" permission)</span></h2>
+    <h2>Limit WebRTC <span>(requires "privacy" permission)</span></h2>
     <p>Toggle WebRTC browser settings</p>
+    <p>Toggle is live and does not require SAVE</p>
     <p><a href="https://developer.mozilla.org/docs/Web/API/WebRTC_API" target="_blank">WebRTC</a> has been known to leak real IP.</p>
 
     <h3>Restore Defaults</h3>
