--- a/src/content/options.html
+++ b/src/content/options.html
@@ -552,7 +552,11 @@
             <th data-i18n="time"></th>
            </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+          <tr>
+            <td class="unavailable" colspan="5" data-i18n="notAvailable"></td>
+        </tr>
+        </tbody>
       </table>
 
       <!-- template -->
