--- a/src/content/help.html
+++ b/src/content/help.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <link href="iframe.css" rel="stylesheet">
-  <title>Help</title>
-</head>
-
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title>Help</title>
+    <link href="iframe.css" rel="stylesheet">
+  </head>
+  <body>
 
   <nav>
     <a href="#intro">Introduction</a>
@@ -15,7 +13,7 @@
     <a href="#options">Options</a>
     <a href="#proxy">Proxy</a>
     <a href="#import">Import</a>
-    <a href="#tester">Tester</a>
+    <a href="#tester">Pattern Tester</a>
     <a href="#log">Log</a>
     <a href="#support">Support</a>
   </nav>
@@ -24,10 +22,10 @@
     <section>
 
     <!-- Error: proxy.settings requires private browsing permission. -->
-    <h3>Private Browsing Permission Required for Firefox</h3>
-    <p class="note">Not required for Chrome, but Firefox requires FoxyProxy to have private browsing permission.
-    <a href="https://support.mozilla.org/en-US/kb/extensions-private-browsing#w_enabling-or-disabling-extensions-in-private-windows" target="_blank">How-to</a>.
-    </p>
+    <h2>📌 Private Browsing Permission Required for Firefox</h2>
+    <p>Not required for Chrome, but Firefox requires FoxyProxy to have private browsing permission.</p>
+    <p>How to: <a href="https://support.mozilla.org/en-US/kb/extensions-private-browsing#w_enabling-or-disabling-extensions-in-private-windows" target="_blank">Enabling or disabling extensions in private windows</a></p></p>
+
 
 
     <h1 id="intro">Introduction</h1>
@@ -39,6 +37,7 @@
     <p>If you upgraded from a previous version, and your proxy settings are missing, please import them.</p>
 
     <h3>Non-Destructive Editing</h3>
+    <!-- <p>Editing & importing is non-destructive.</p> -->
     <p><b>Save</b> must be clicked to apply changes.</p>
 
     <h3>Proxy Authentication</h3>
@@ -377,7 +376,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
 
 
 
-    <h1 id="tester">Tester</h1>
+    <h1 id="tester">Pattern Tester</h1>
     <ol>
       <li>Enter URL to test</li>
       <li>Select the pattern type</li>
