Experimental Android support #21

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,6 +19,7 @@
       <dt>8.0</dt>
       <dd>Added complete Light/Dark Theme</dd>
       <dd>Added Exclude host feature</dd>
+      <dd>Added experimental Firefox on Android support (#21)</dd>
       <dd>Added Get Location feature</dd>
       <dd>Added Global Exclude</dd>
       <dd>Added Host Pattern to proxy feature</dd>
@@ -33,7 +34,6 @@
       <dd>Update User Interface</dd>
       <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
       <dd>Updated Import Proxy List</dd>
-      <dd></dd>
 
     </dl>
 
