--- a/src/content/help.html
+++ b/src/content/help.html
@@ -46,6 +46,9 @@
       <li>Authentication is port-specific i.e. there can be different user/pass for <code>example.com:3128</code> & <code>example.com:443</code></li>
     </ul>
 
+    <h3 class="experimental">Firefox on Android</h3>
+    <p>Support is experimental and based on user feedback.</p>
+
     <h1 id="how-to">How to Use</h1>
 
     <h4>Light/Dark Theme</h4>
@@ -215,7 +218,7 @@
       <dd>To be used for HTTP/HTTPS/SOCKS types</dd>
       <dd>If not set, authentication will be handled by the browser</dd>
 
-      <dt>PAC URL</dt>
+      <dt>PAC URL <span>(not available on Android)</span></dt>
       <dd>Required for PAC type</dd>
 
     </dl>
