--- a/src/content/options.html
+++ b/src/content/options.html
@@ -70,11 +70,11 @@
             <option disabled selected>&nbsp;</option>
             <option data-type="regex" value="^http://.+">HTTP</option>
             <option data-type="regex" value="^https://.+">HTTPS</option>
-            <option data-type="regex" value="^[^:]+://[^.]+/" data-i18n="plainHost"></option>
-            <option data-type="regex" value="^[^:]+://10(\.\d+){3}/">10.*.*.*</option>
-            <option data-type="regex" value="^[^:]+://127\.0\.0\.1/">127.0.0.1</option>
-            <option data-type="regex" value="^[^:]+://172\.16(\.\d+){2}/">172.16.*.*</option>
-            <option data-type="regex" value="^[^:]+://192\.168(\.\d+){2}/">192.168.*.*</option>
+            <option data-type="regex" value="^https?://[^.]+/" data-i18n="plainHost"></option>
+            <option data-type="regex" value="^https?://10(\.\d+){3}/">10.*.*.*</option>
+            <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option>
+            <option data-type="regex" value="^https?://172\.16(\.\d+){2}/">172.16.*.*</option>
+            <option data-type="regex" value="^https?://192\.168(\.\d+){2}/">192.168.*.*</option>
           </select>
         </div>
 
@@ -446,11 +446,11 @@
             <option data-type="regex" value="\S+" data-i18n="all"></option>
             <option data-type="regex" value="^http://.+">HTTP</option>
             <option data-type="regex" value="^https://.+">HTTPS</option>
-            <option data-type="regex" value="^[^:]+://[^.]+/" data-i18n="plainHost"></option>
-            <option data-type="regex" value="^[^:]+://10(\.\d+){3}/">10.*.*.*</option>
-            <option data-type="regex" value="^[^:]+://127\.0\.0\.1/">127.0.0.1</option>
-            <option data-type="regex" value="^[^:]+://172\.16(\.\d+){2}/">172.16.*.*</option>
-            <option data-type="regex" value="^[^:]+://192\.168(\.\d+){2}/">192.168.*.*</option>
+            <option data-type="regex" value="^https?://[^.]+/" data-i18n="plainHost"></option>
+            <option data-type="regex" value="^https?://10(\.\d+){3}/">10.*.*.*</option>
+            <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option>
+            <option data-type="regex" value="^https?://172\.16(\.\d+){2}/">172.16.*.*</option>
+            <option data-type="regex" value="^https?://192\.168(\.\d+){2}/">192.168.*.*</option>
           </select>
           <select>
             <option value="include" data-i18n="include"></option>
