--- a/src/content/about.html
+++ b/src/content/about.html
@@ -23,17 +23,18 @@
       <dd>Added Get Location feature</dd>
       <dd>Added Global Exclude</dd>
       <dd>Added Host Pattern to proxy feature</dd>
-      <dd>Added Import FoxyProxy Account (wasn't available in CHrome)</dd>
+      <dd>Added Import FoxyProxy Account (Chrome)</dd>
       <dd>Added Import From URL</dd>
       <dd>Added Limit WebRTC feature</dd>
       <dd>Added live Log (Firefox only)</dd>
+      <dd>Changed <code>"browsingData"</code> to optional permissions</dd>
       <dd>Dropped 'browser_style' in preparation for MV3</dd>
       <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
       <dd>Unified code for Firefox, Chrome, and other Chromium-based browsers</dd>
       <dd>Unified storage to share between Firefox & Chrome</dd>
-      <dd>Update User Interface</dd>
       <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
       <dd>Updated Import Proxy List</dd>
+      <dd>Updated User Interface</dd>
 
     </dl>
 
