--- a/src/content/help.html
+++ b/src/content/help.html
@@ -8,12 +8,12 @@
   <body>
 
   <nav>
-    <a href="#intro">Introduction</a>
-    <a href="#how-to">How to Use</a>
+    <a href="#introduction">Introduction</a>
+    <a href="#how-to-use">How to Use</a>
     <a href="#options">Options</a>
     <a href="#proxy">Proxy</a>
     <a href="#import">Import</a>
-    <a href="#tester">Pattern Tester</a>
+    <a href="#pattern-tester">Pattern Tester</a>
     <a href="#log">Log</a>
     <a href="#support">Support</a>
   </nav>
@@ -28,7 +28,7 @@
 
 
 
-    <h1 id="intro">Introduction</h1>
+    <h1 id="introduction">Introduction</h1>
 
     <p>First released in 2006, FoxyProxy is the original proxy switching tool. Used by millions daily!
       To support this free software, please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or <a href="https://getfoxyproxy.org/order/" target="_blank">buy VPN/Proxy Servers</a> in over 100 countries (including such remote places as <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>).
@@ -49,7 +49,7 @@
     <h3 class="experimental">Firefox on Android</h3>
     <p>Support is experimental and based on user feedback.</p>
 
-    <h1 id="how-to">How to Use</h1>
+    <h1 id="how-to-use">How to Use</h1>
 
     <h4>Light/Dark Theme</h4>
     <p>FoxyProxy's theme is based on the browser's default light/dark theme.</p>
@@ -379,7 +379,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
 
 
 
-    <h1 id="tester">Pattern Tester</h1>
+    <h1 id="pattern-tester">Pattern Tester</h1>
     <ol>
       <li>Enter URL to test</li>
       <li>Select the pattern type</li>
