--- a/src/content/options.html
+++ b/src/content/options.html
@@ -83,7 +83,7 @@
           <label class="flat" data-i18n="import"><input type="file" id="file" accept=".json"></label>
           <button type="button" id="export" class="flat" data-i18n="export"></button>
           <span></span>
-          <button type="button" class="flat" data-i18n="deleteBrowsingData"></button>
+          <button type="button" class="flat" data-i18n="deleteBrowsingData" id="deleteBrowsingData"></button>
           <button type="button" class="flat" data-i18n="restoreDefaults"></button>
         </div>
 
