--- a/src/content/options.html
+++ b/src/content/options.html
@@ -72,7 +72,7 @@
             <option data-type="regex" value="^https://.+">HTTPS</option>
             <option data-type="regex" value="^https?://[^.]+/" data-i18n="plainHost"></option>
             <option data-type="regex" value="^https?://10(\.\d+){3}/">10.*.*.*</option>
-            <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option>
+            <!-- <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option> -->
             <option data-type="regex" value="^https?://172\.16(\.\d+){2}/">172.16.*.*</option>
             <option data-type="regex" value="^https?://192\.168(\.\d+){2}/">192.168.*.*</option>
           </select>
@@ -448,7 +448,7 @@
             <option data-type="regex" value="^https://.+">HTTPS</option>
             <option data-type="regex" value="^https?://[^.]+/" data-i18n="plainHost"></option>
             <option data-type="regex" value="^https?://10(\.\d+){3}/">10.*.*.*</option>
-            <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option>
+            <!-- <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option> -->
             <option data-type="regex" value="^https?://172\.16(\.\d+){2}/">172.16.*.*</option>
             <option data-type="regex" value="^https?://192\.168(\.\d+){2}/">192.168.*.*</option>
           </select>
