--- a/src/content/about.html
+++ b/src/content/about.html
@@ -27,6 +27,7 @@
       <dd>Added Import From URL</dd>
       <dd>Added Limit WebRTC feature</dd>
       <dd>Added live Log (Firefox only)</dd>
+      <dd>Added Tab Proxy feature (Firefox only)</dd>
       <dd>Changed <code>"browsingData"</code> to optional permissions</dd>
       <dd>Dropped 'browser_style' in preparation for MV3</dd>
       <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
