--- a/src/content/help.html
+++ b/src/content/help.html
@@ -79,15 +79,22 @@
       <dt>Individual Proxy</dt>
       <dd>Connections are passed through the selected proxy (or PAC)</dd>
 
-      <dt>Add Host Pattern to ...</dt>
-      <dd>Quickly create and add a pattern based on the current page URL to the selected proxy</dd>
-      <dd>Only top 10 proxies are listed</dd>
+      <dt>Quick Add</dt>
+      <dd>Select a proxy to add a pattern based on the current page URL</dd>
+      <dd>Only top 10 active proxies are listed</dd>
+
+      <dt>Exclude Host</dt>
+      <dd>Add host (with its protocol) to the Global Exclude</dd>
+
+      <dt>Set Tab Proxy</dt>
+      <dd>Select a proxy for the current tab</dd>
+      <dd>Only top 10 active proxies are listed</dd>
+
+      <dt>Unset Tab Proxy</dt>
+      <dd>Unset proxy for the current tab</dd>
 
       <dt>Options</dt>
       <dd>Open the Options page</dd>
-
-      <dt>Exclude Host</dt>
-      <dd>Adds host (with its protocol) to the Global Exclude</dd>
 
       <dt>IP</dt>
       <dd>Get IP from FoxyProxy servers</dd>
