--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -27,15 +27,19 @@
         </div>
 
         <div class="host">
-          <label data-i18n="addHost"></label>
           <select>
-            <option disabled selected>&nbsp;</option>
+            <option value="" disabled selected>&nbsp;</option>
           </select>
+
+          <button type="button" data-i18n="quickAdd"></button>
+          <button type="button" data-i18n="setTabProxy"></button>
+
+          <button type="button" data-i18n="excludeHost"></button>
+          <button type="button" data-i18n="unsetTabProxy"></button>
         </div>
 
         <div class="buttons">
           <button type="button" data-i18n="options"></button>
-          <button type="button" data-i18n="excludeHost"></button>
           <button type="button" data-i18n="location"></button>
           <button type="button" data-i18n="ip"></button>
         </div>
