--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -32,10 +32,10 @@
           </select>
 
           <button type="button" data-i18n="quickAdd"></button>
-          <button type="button" data-i18n="setTabProxy"></button>
+          <button type="button" class="firefox" data-i18n="setTabProxy"></button>
 
           <button type="button" data-i18n="excludeHost"></button>
-          <button type="button" data-i18n="unsetTabProxy"></button>
+          <button type="button" class="firefox" data-i18n="unsetTabProxy"></button>
         </div>
 
         <div class="buttons">
