--- a/src/content/help.html
+++ b/src/content/help.html
@@ -86,11 +86,11 @@
       <dt>Exclude Host</dt>
       <dd>Add host (with its protocol) to the Global Exclude</dd>
 
-      <dt>Set Tab Proxy</dt>
+      <dt>Set Tab Proxy <span>(Firefox only)</span></dt>
       <dd>Select a proxy for the current tab</dd>
       <dd>Only top 10 active proxies are listed</dd>
 
-      <dt>Unset Tab Proxy</dt>
+      <dt>Unset Tab Proxy <span>(Firefox only)</span></dt>
       <dd>Unset proxy for the current tab</dd>
 
       <dt>Options</dt>
