--- a/src/content/help.html
+++ b/src/content/help.html
@@ -136,8 +136,8 @@
     <p class="note">There is a discussion to increase the storage sync quota to 1MB (<a href="https://github.com/w3c/webextensions/issues/351" target="_blank">Discuss limits applied to storage.local and storage.sync API</a>).</p>
 
 
-    <h2>Proxy DNS <span>(SOCKS 5 & Firefox only)</span></h2>
-    <p>Option to pass DNS to the SOCKS proxy</p>
+    <h2>Proxy DNS <span>(Firefox only)</span></h2>
+    <p>Option to pass DNS to the SOCKS proxy when using SOCKS5</p>
 
     <h2 id="global-exclude">Global Exclude</h2>
     <ul>
@@ -225,7 +225,7 @@
       <dd>Set the proxy color</dd>
 
       <dt>Hostname & Port</dt>
-      <dd>Required for HTTP/HTTPS/SOCKS/SOCKS4 type</dd>
+      <dd>Required for HTTP/HTTPS/SOCKS type</dd>
 
       <dt>Username & Password</dt>
       <dd>To be used for HTTP/HTTPS/SOCKS types</dd>
