--- a/src/content/help.html
+++ b/src/content/help.html
@@ -89,6 +89,7 @@
       <dt>Set Tab Proxy <span>(Firefox only)</span></dt>
       <dd>Select a proxy for the current tab</dd>
       <dd>Only top 10 active proxies are listed</dd>
+      <dd>FoxyProxy icon will show in the selected tab and mouse-over title displays selection details</dd>
 
       <dt>Unset Tab Proxy <span>(Firefox only)</span></dt>
       <dd>Unset proxy for the current tab</dd>
@@ -137,15 +138,15 @@
 
 
     <h2>Proxy DNS <span>(Firefox only)</span></h2>
-    <p>Option to pass DNS to the SOCKS proxy when using SOCKS5</p>
+    <p>Option to pass DNS to the SOCKS proxy when using SOCKS v5</p>
 
     <h2 id="global-exclude">Global Exclude</h2>
     <ul>
-      <li>Patterns entered here will never be proxied.</li>
-      <li>Pattern rules are the same as include/exclude <a href="#patterns">patterns</a>.</li>
-      <pli>Use the drop down menu to add ready-made patterns.</pli>
-      <li>Duplicates will be removed.</li>
-      <li>In Firefox you can also use "No proxy for" in <a href="https://support.mozilla.org/en-US/kb/connection-settings-firefox" target="_blank">Connection settings in Firefox</a></li>
+      <li>Patterns entered here will never be proxied</li>
+      <li>Pattern rules are the same as include/exclude <a href="#patterns">patterns</a></li>
+      <pli>Use the drop down menu to add ready-made patterns</pli>
+      <li>Duplicates will be removed</li>
+      <!-- <li>In Firefox you can also use "No proxy for" in <a href="https://support.mozilla.org/en-US/kb/connection-settings-firefox" target="_blank">Connection settings in Firefox</a></li> -->
     </ul>
 
 
