--- a/src/content/options.html
+++ b/src/content/options.html
@@ -52,7 +52,7 @@
         <p class="description" data-i18n="enableSyncDescription"></p>
 
         <label data-i18n="proxyDNS"><input type="checkbox" id="proxyDNS"></label>
-        <p class="description" data-i18n="proxyDnsDescription"></p>
+        <p class="description" data-i18n="proxyDNSDescription"></p>
 
         <label data-i18n="limitWebRTC"><input type="checkbox" id="limitWebRTC"></label>
         <p class="description" data-i18n="limitWebRTCDescription"></p>
