--- a/src/content/options.html
+++ b/src/content/options.html
@@ -113,7 +113,7 @@
 
       <!-- template -->
       <template>
-        <details class="proxy">
+        <details class="proxy" draggable="true">
           <summary>
             <span>🌎</span>
             <span></span>
