--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,7 +17,8 @@
     <h2 id="changelog">Changelog</h2>
     <dl>
       <dt>8.1</dt>
-      <dd></dd>
+      <dd>Added Drag and Drop sorting of proxies (#29)</dd>
+      <dd>Fixed a pattern conversion issue (#28)</dd>
 
 
 
