--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,7 +18,13 @@
     <dl>
       <dt>8.1</dt>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
+      <dd>Added Incognito/Container proxy (Firefox only) (experimental) (#33)</dd>
+      <dd>Added more data to the Log</dd>
+      <dd>Added port search to search filter</dd>
+      <dd>Added search filter to Toolbar popup (#23)</dd>
       <dd>Fixed a pattern conversion issue (#28)</dd>
+      <dd>Increased Log display entries to 200</dd>
+
 
 
 
@@ -47,6 +53,9 @@
 
     <h2 id="credits">Credits</h2>
     <dl>
+      <dt>Icons</dt>
+      <dd>SVG: Mozilla</dd>
+      <dd>SVG: http://www.onlinewebfonts.com/icon</dd>
 
       <dt>Translations</dt>
       <dd><a href="https://github.com/foxyproxy/browser-extension" target="_blank">Github Public Repository</a></dd>
