--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -27,6 +27,8 @@
         </div>
 
         <div class="host">
+          <input type="text" id="filter" spellcheck="false" placeholder="filter">
+
           <select>
             <option value="" disabled selected>&nbsp;</option>
           </select>
