--- a/src/content/options.html
+++ b/src/content/options.html
@@ -61,6 +61,7 @@
         <p class="description" data-i18n="containerDescription"></p>
 
         <div class="container">
+
           <label data-i18n="incognito"></label>
           <select name="incognito">
             <option value="">&nbsp;</option>
@@ -87,6 +88,31 @@
           </select>
 
         </div>
+
+
+        <label data-i18n="shortcut"></label>
+        <p class="description" data-i18n="shortcutDescription"></p>
+
+        <div class="commands">
+
+          <label data-i18n="setProxy"></label>
+          <select name="setProxy">
+            <option value="">&nbsp;</option>
+          </select>
+
+          <label data-i18n="setTabProxy"></label>
+          <select name="setTabProxy">
+            <option value="">&nbsp;</option>
+          </select>
+
+          <label data-i18n="quickAdd"></label>
+          <select name="quickAdd">
+            <option value="">&nbsp;</option>
+          </select>
+
+        </div>
+
+
 
         <label data-i18n="globalExclude"></label>
         <p class="description" data-i18n="globalExcludeDescription"></p>
