--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,6 +19,7 @@
       <dt>8.1</dt>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added Incognito/Container proxy (Firefox only) (experimental) (#33)</dd>
+      <dd>Added Keyboard Shortcut feature</dd>
       <dd>Added more data to the Log</dd>
       <dd>Added port search to search filter</dd>
       <dd>Added search filter to Toolbar popup (#23)</dd>
