--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,6 +17,7 @@
     <h2 id="changelog">Changelog</h2>
     <dl>
       <dt>8.1</dt>
+      <dd>Added 'DIRECT' option to Set Tab Proxy (#33)</dd>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added Incognito/Container proxy (Firefox only) (experimental) (#33)</dd>
       <dd>Added Keyboard Shortcut feature</dd>
@@ -25,6 +26,7 @@
       <dd>Added search filter to Toolbar popup (#23)</dd>
       <dd>Fixed a pattern conversion issue (#28)</dd>
       <dd>Increased Log display entries to 200</dd>
+      <dd>Updated Global Exclude process</dd>
 
       <dt>8.0</dt>
       <dd>Added complete Light/Dark Theme</dd>
@@ -51,6 +53,10 @@
 
     <h2 id="credits">Credits</h2>
     <dl>
+
+      <dt>Developer</dt>
+      <dd><a href="https://github.com/erosman" target="_blank">erosman</a></dd>
+
       <dt>Icons</dt>
       <dd>SVG: Mozilla</dd>
       <dd>SVG: http://www.onlinewebfonts.com/icon</dd>
